; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/nvi/vi/extr_v_zexit.c_v_zexit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/nvi/vi/extr_v_zexit.c_v_zexit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@F_MODIFIED = common dso_local global i32 0, align 4
@FS_ALL = common dso_local global i32 0, align 4
@SC_EXIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @v_zexit(%struct.TYPE_7__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @F_MODIFIED, align 4
  %10 = call i64 @F_ISSET(i32 %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %14 = load i32, i32* @FS_ALL, align 4
  %15 = call i64 @file_write(%struct.TYPE_7__* %13, i32* null, i32* null, i32* null, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %32

18:                                               ; preds = %12, %2
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %20 = call i64 @file_m3(%struct.TYPE_7__* %19, i32 0)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i32 1, i32* %3, align 4
  br label %32

23:                                               ; preds = %18
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %25 = call i64 @ex_ncheck(%struct.TYPE_7__* %24, i32 0)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i32 1, i32* %3, align 4
  br label %32

28:                                               ; preds = %23
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %30 = load i32, i32* @SC_EXIT, align 4
  %31 = call i32 @F_SET(%struct.TYPE_7__* %29, i32 %30)
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %28, %27, %22, %17
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @F_ISSET(i32, i32) #1

declare dso_local i64 @file_write(%struct.TYPE_7__*, i32*, i32*, i32*, i32) #1

declare dso_local i64 @file_m3(%struct.TYPE_7__*, i32) #1

declare dso_local i64 @ex_ncheck(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @F_SET(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
